@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-08T16:23:39Z",
-  "count_outdated" : 643,
-  "uniques_outdated" : 367,
-  "count" : 669,
+  "timestamp" : "2022-11-09T01:22:36Z",
+  "count_outdated" : 645,
+  "uniques_outdated" : 368,
+  "count" : 670,
   "uniques" : 380,
   "clones" : [
-    {
-      "timestamp": "2022-10-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-26T00:00:00Z",
       "count": 2,
